# qp_solver

./: .gitmodules  CMakeLists.txt  README.md
include/: QP.hpp  structs.hpp
src/: QP.cpp  main.cpp  qp_bindings.cpp
